// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`autoMerge cautious 1`] = `
{
  "_tableName": "Agent",
  "abbreviation": null,
  "addresses": [
    {
      "_tableName": "Address",
      "address": "1",
      "address2": null,
      "address3": null,
      "address4": null,
      "address5": null,
      "agent": null,
      "city": null,
      "country": null,
      "createdByAgent": "/api/specify/agent/1313/",
      "divisions": "/api/specify/division/?address=742",
      "endDate": null,
      "fax": null,
      "insitutions": "/api/specify/institution/?address=742",
      "isCurrent": null,
      "isPrimary": null,
      "isShipping": null,
      "modifiedByAgent": null,
      "ordinal": null,
      "phone1": null,
      "phone2": null,
      "positionHeld": null,
      "postalCode": null,
      "remarks": null,
      "resource_uri": undefined,
      "roomOrBuilding": null,
      "startDate": null,
      "state": null,
      "timestampCreated": "2022-08-31",
      "timestampModified": null,
      "typeOfAddr": null,
      "version": 1,
    },
    {
      "_tableName": "Address",
      "address": "10",
      "address2": null,
      "address3": null,
      "address4": null,
      "address5": null,
      "agent": null,
      "city": null,
      "country": null,
      "createdByAgent": "/api/specify/agent/1313/",
      "divisions": "/api/specify/division/?address=742",
      "endDate": null,
      "fax": null,
      "insitutions": "/api/specify/institution/?address=742",
      "isCurrent": null,
      "isPrimary": null,
      "isShipping": null,
      "modifiedByAgent": null,
      "ordinal": null,
      "phone1": null,
      "phone2": null,
      "positionHeld": null,
      "postalCode": null,
      "remarks": null,
      "resource_uri": undefined,
      "roomOrBuilding": null,
      "startDate": null,
      "state": null,
      "timestampCreated": "2022-08-31",
      "timestampModified": null,
      "typeOfAddr": null,
      "version": 1,
    },
    {
      "_tableName": "Address",
      "address": "2",
      "address2": null,
      "address3": null,
      "address4": null,
      "address5": null,
      "agent": null,
      "city": null,
      "country": null,
      "createdByAgent": "/api/specify/agent/1313/",
      "divisions": "/api/specify/division/?address=742",
      "endDate": null,
      "fax": null,
      "insitutions": "/api/specify/institution/?address=742",
      "isCurrent": null,
      "isPrimary": null,
      "isShipping": null,
      "modifiedByAgent": null,
      "ordinal": null,
      "phone1": null,
      "phone2": null,
      "positionHeld": null,
      "postalCode": null,
      "remarks": null,
      "resource_uri": undefined,
      "roomOrBuilding": null,
      "startDate": null,
      "state": null,
      "timestampCreated": "2022-08-31",
      "timestampModified": null,
      "typeOfAddr": null,
      "version": 1,
    },
  ],
  "agentAttachments": [],
  "agentGeographies": [],
  "agentSpecialties": [],
  "agentType": 0,
  "catalogerOf": "/api/specify/CollectionObject?cataloger=2305",
  "collContentContact": null,
  "collTechContact": null,
  "collectors": "/api/specify/collector/?agent=2305",
  "components": "/api/specify/Component?identifiedby=2305",
  "createdByAgent": "/api/specify/agent/1313/",
  "date1": null,
  "date1Precision": null,
  "date2": null,
  "date2Precision": 2,
  "dateOfBirth": null,
  "dateOfBirthPrecision": null,
  "dateOfDeath": null,
  "dateOfDeathPrecision": null,
  "dateType": null,
  "division": "/api/specify/division/2/",
  "email": null,
  "firstName": null,
  "groups": [],
  "guid": "d513a358-d978-496d-8f54-52b63d3d2f4c",
  "identifiers": [],
  "initials": null,
  "instContentContact": null,
  "instTechContact": null,
  "integer1": null,
  "integer2": null,
  "interests": null,
  "jobTitle": null,
  "lastName": null,
  "members": "/api/specify/groupperson/?member=2305",
  "middleInitial": null,
  "modifiedByAgent": null,
  "orgMembers": "/api/specify/agent/?organization=2305",
  "organization": null,
  "remarks": null,
  "resource_uri": undefined,
  "specifyUser": null,
  "suffix": null,
  "text1": null,
  "text2": null,
  "text3": null,
  "text4": null,
  "text5": null,
  "timestampCreated": "2022-08-31",
  "timestampModified": null,
  "title": null,
  "url": null,
  "variants": [],
  "verbatimDate1": null,
  "verbatimDate2": null,
  "version": 1,
}
`;

exports[`autoMerge not cautious 1`] = `
{
  "_tableName": "Agent",
  "abbreviation": null,
  "addresses": [
    {
      "_tableName": "Address",
      "address": "1",
      "address2": null,
      "address3": null,
      "address4": null,
      "address5": null,
      "agent": null,
      "city": null,
      "country": null,
      "createdByAgent": "/api/specify/agent/1313/",
      "divisions": "/api/specify/division/?address=742",
      "endDate": null,
      "fax": null,
      "insitutions": "/api/specify/institution/?address=742",
      "isCurrent": null,
      "isPrimary": null,
      "isShipping": null,
      "modifiedByAgent": null,
      "ordinal": null,
      "phone1": null,
      "phone2": null,
      "positionHeld": null,
      "postalCode": null,
      "remarks": null,
      "resource_uri": undefined,
      "roomOrBuilding": null,
      "startDate": null,
      "state": null,
      "timestampCreated": "2022-08-31",
      "timestampModified": null,
      "typeOfAddr": null,
      "version": 1,
    },
    {
      "_tableName": "Address",
      "address": "10",
      "address2": null,
      "address3": null,
      "address4": null,
      "address5": null,
      "agent": null,
      "city": null,
      "country": null,
      "createdByAgent": "/api/specify/agent/1313/",
      "divisions": "/api/specify/division/?address=742",
      "endDate": null,
      "fax": null,
      "insitutions": "/api/specify/institution/?address=742",
      "isCurrent": null,
      "isPrimary": null,
      "isShipping": null,
      "modifiedByAgent": null,
      "ordinal": null,
      "phone1": null,
      "phone2": null,
      "positionHeld": null,
      "postalCode": null,
      "remarks": null,
      "resource_uri": undefined,
      "roomOrBuilding": null,
      "startDate": null,
      "state": null,
      "timestampCreated": "2022-08-31",
      "timestampModified": null,
      "typeOfAddr": null,
      "version": 1,
    },
    {
      "_tableName": "Address",
      "address": "2",
      "address2": null,
      "address3": null,
      "address4": null,
      "address5": null,
      "agent": null,
      "city": null,
      "country": null,
      "createdByAgent": "/api/specify/agent/1313/",
      "divisions": "/api/specify/division/?address=742",
      "endDate": null,
      "fax": null,
      "insitutions": "/api/specify/institution/?address=742",
      "isCurrent": null,
      "isPrimary": null,
      "isShipping": null,
      "modifiedByAgent": null,
      "ordinal": null,
      "phone1": null,
      "phone2": null,
      "positionHeld": null,
      "postalCode": null,
      "remarks": null,
      "resource_uri": undefined,
      "roomOrBuilding": null,
      "startDate": null,
      "state": null,
      "timestampCreated": "2022-08-31",
      "timestampModified": null,
      "typeOfAddr": null,
      "version": 1,
    },
  ],
  "agentAttachments": [],
  "agentGeographies": [],
  "agentSpecialties": [],
  "agentType": 0,
  "catalogerOf": "/api/specify/CollectionObject?cataloger=2305",
  "collContentContact": null,
  "collTechContact": null,
  "collectors": "/api/specify/collector/?agent=2305",
  "components": "/api/specify/Component?identifiedby=2305",
  "createdByAgent": "/api/specify/agent/1313/",
  "date1": "2020-01-01",
  "date1Precision": null,
  "date2": null,
  "date2Precision": 2,
  "dateOfBirth": null,
  "dateOfBirthPrecision": null,
  "dateOfDeath": null,
  "dateOfDeathPrecision": null,
  "dateType": null,
  "division": "/api/specify/division/2/",
  "email": null,
  "firstName": null,
  "groups": [],
  "guid": "d513a358-d978-496d-8f54-52b63d3d2f4c",
  "identifiers": [],
  "initials": null,
  "instContentContact": null,
  "instTechContact": null,
  "integer1": null,
  "integer2": null,
  "interests": null,
  "jobTitle": null,
  "lastName": "2",
  "members": "/api/specify/groupperson/?member=2305",
  "middleInitial": null,
  "modifiedByAgent": null,
  "orgMembers": "/api/specify/agent/?organization=2305",
  "organization": null,
  "remarks": null,
  "resource_uri": undefined,
  "specifyUser": null,
  "suffix": null,
  "text1": null,
  "text2": null,
  "text3": null,
  "text4": null,
  "text5": null,
  "timestampCreated": "2023-01-28T00:36:28",
  "timestampModified": "2023-01-29T00:36:28",
  "title": null,
  "url": null,
  "variants": [],
  "verbatimDate1": null,
  "verbatimDate2": null,
  "version": 1,
}
`;
